<resources>

    <string name="temp">Temp string</string>
    <string name="no_connection">No internet connection!</string>
    <string name="api_error">An error occurred while retrieving the data from Newsapi.org</string>
    <string name="read_more">Read more</string>

    <string name="home">Home</string>
    <string name="sources">Sources:</string>
    <string name="general">General</string>
    <string name="tech">Tech</string>
    <string name="gaming">Gaming</string>
    <string name="the_verge">The Verge</string>
    <string name="polygon">Polygon</string>
    <string name="rtl_nieuws">RTL Nieuws</string>
    <string name="app_name">News Node</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="username_register">Choose your username.</string>
    <string name="email_register">Input your email.</string>
    <string name="password_register">Set your password (10-12 characters)</string>

    <string name="news_node">NEWS NODE</string>
    <string name="news_api">Powered by News API</string>

    <string name="username_login">Email or Username</string>
    <string name="password_login">Password</string>
    <string name="create_account">No account yet? Create one</string>

    <string name="android_studio">Android Studio</string>
    <string name="android_default_email">android.studio@android.com</string>

    <string name="already_registered">Are you already a member? Login</string>
    <string name="splash_credit">An application by Laith and William</string>
</resources>