<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.newsapp.newsapplication.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:src="@drawable/news_node" />

        <TextView
            android:id="@+id/textViewNode"
            style="@style/teView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_node" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewNode"
            android:hint="Username or Email"
            android:id="@+id/Enter"
            android:inputType="textEmailAddress"
            style="@style/editText_style"/>

        <TextView
            android:id="@+id/login_username"
            style="@style/teView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_login" />

        <EditText
            android:id="@+id/etpass"
            style="@style/editText_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/login_password"
            style="@style/teView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_login" />

        <Button
            android:text="Log in"
            android:id="@+id/button"
            android:layout_below="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_style"/>

        <TextView
            android:id="@+id/signup"
            style="@style/teView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonLogin"
            android:text="@string/create_account" />

    </LinearLayout>
</RelativeLayout>