<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_min"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/user_image_registry"
            android:layout_height="90dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:src="@drawable/imagen" />

        <EditText
            android:id="@+id/registration_name"
            style="@style/editText_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewNode"
            android:hint="Username"
            android:inputType="textEmailAddress" />


        <TextView
            android:id="@+id/textViewUsername"
            style="@style/teView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_register" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:id="@+id/registration_mail"
            android:layout_below="@+id/editName"
            style="@style/editText_style"/>

        <TextView
            android:id="@+id/textViewEmail"
            style="@style/teView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_register" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Password"
            android:id="@+id/password_registration"
            android:layout_below="@+id/editEmail"
            style="@style/editText_style" />

        <TextView
            android:id="@+id/textViewNode"
            style="@style/teView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_register" />

        <Button
            android:text="Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_user_registration"
            android:layout_below="@+id/editPassword"
            style="@style/button_style"/>

        <TextView
            android:id="@+id/link_login"
            style="@style/teView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_registered" />
    </LinearLayout>
</RelativeLayout>